{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 36,
  "lineage": "b2a1b878-8598-3311-a662-417a30131c93",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/networkInterfaces/nic1",
            "internal_domain_name_suffix": "5zxdbkwyjurefmaxhcuo4xqelb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/publicIPAddresses/JWM-IP-1",
                "subnet_id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/virtualNetworks/VNET1/subnets/subnet"
              }
            ],
            "location": "eastus",
            "name": "nic1",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "JWM-Terraform",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.JWM-IP-1",
            "azurerm_resource_group.JWM-Terraform",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.VNET1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/networkSecurityGroups/NSG1",
            "location": "eastus",
            "name": "NSG1",
            "resource_group_name": "JWM-Terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NSG1-rules",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "99.57.68.167/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.JWM-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG1-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/networkSecurityGroups/NSG1/securityRules/NSG1-rules",
            "name": "NSG1-rules",
            "network_security_group_name": "NSG1",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "JWM-Terraform",
            "source_address_prefix": "99.57.68.167/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG1",
            "azurerm_resource_group.JWM-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "JWM-IP-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/publicIPAddresses/JWM-IP-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "JWM-IP-1",
            "resource_group_name": "JWM-Terraform",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.JWM-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/virtualNetworks/VNET1/subnets/subnet",
            "name": "subnet",
            "resource_group_name": "JWM-Terraform",
            "virtual_network_name": "VNET1"
          },
          "dependencies": [
            "azurerm_resource_group.JWM-Terraform",
            "azurerm_virtual_network.VNET1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NSG1-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/virtualNetworks/VNET1/subnets/subnet",
            "network_security_group_id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/networkSecurityGroups/NSG1",
            "subnet_id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/virtualNetworks/VNET1/subnets/subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG1",
            "azurerm_resource_group.JWM-Terraform",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.VNET1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "aa306efe-4dd8-4222-b017-38a8ef5e0459",
            "id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/virtualNetworks/VNET1",
            "location": "eastus",
            "name": "VNET1",
            "resource_group_name": "JWM-Terraform",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/virtualNetworks/VNET1/subnets/subnet",
                "name": "subnet",
                "security_group": "/subscriptions/810ce79c-ac47-4a32-99a7-c28ecbcf314f/resourceGroups/JWM-Terraform/providers/Microsoft.Network/networkSecurityGroups/NSG1"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.JWM-Terraform"
          ]
        }
      ]
    }
  ]
}